crates/edgedb_macros/tests/ui/incorrect_args.stderr
error: expected string literal
 --> tests/ui/incorrect_args.rs:4:32
  |
4 |     edgedb_query!(example_module, invalid);
  |                                   ^^^^^^^
